# VLA

./: .gitignore  README.md  berkeley_ur5_dataset_stats.pt  download_checkpoint.py  new_node.py  ros2 command  show_model.py  ur5_startup_guide.md
ros2_ws/: .gitignore
ros2_ws/src/: URController.py
ros2_ws/src/pi0_ros_bridge/: input_adapter.py  live_inference.py  package.xml  pi0_ros_node.py  setup.py  train_config.py
ros2_ws/src/pi0_ros_bridge/launch/: bridge.launch.py
ros2_ws/src/pi0_ros_bridge/pi0_ros_bridge/: data_config.py  fake_image_publisher.py  input_adapter.py  main.py  output_adapter.py  pi0_ros_node.py  train_config.py
ros2_ws/src/pi0_ur5_grasp/: package.xml  setup.cfg  setup.py
ros2_ws/src/pi0_ur5_grasp/launch/: pi0_grasp.launch.py
ros2_ws/src/pi0_ur5_grasp/pi0_ur5_grasp/: generate_dataset_stats.py  home_pose.py  main.py  simplegrasp.py  smolvlagrasp.py
ros2_ws/src/ur5_controller_test/: joint_test_publischer.py
ros2_ws/src/ur5_controller_test/launch/: ur5_test.launch.py
scripts/: pi0_test.py
