<?xml version="1.0"?>
<package format="3">
  <name>pi0_ros_bridge</name>
  <version>1.0.0</version>
  <description>ROS 2 bridge for pi0 model and UR5 control</description>

  <maintainer email="shuo.zhang@ipk.fraunhofer.de">shuo zhang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>openpi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>